box alignment fixed

--- a/style.css
+++ b/style.css
@@ -603,32 +603,43 @@ th {
   }
 
   .calculator-box {
-    /* border: 2px solid red; */
+    /* border: 2px solid rgb(0, 255, 81); */
     align-items: left;
+  }
+
+  .calc-input {
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: left;
+    flex-direction: column;
+    /* border: 2px solid blue; */
+    /* box-sizing: border-box; */
+    margin: 0 auto;
   }
 
   .calculator {
     width: 90%;
     margin: 0;
     padding: 0;
-    column-gap: 15px;
+    column-gap: 8px;
     margin-top: 30px;
     /* border: 2px solid red; */
-    margin-left: -12px;
+    margin-left: -17px;
   }
 
   .height,
   .weight,
   .age,
   .sex {
-    width: 160px;
-    margin-left: -8px;
+    max-width: 160px;
+    /* margin-left: -8px; */
   }
 
   .activity {
     /* border: 1px solid green; */
-    width: 328px;
-    margin: 10px auto;
+    max-width: 328px;
+    margin-left: -16px;
   }
 
   .calculate-btn {
